--- a/application/views/components/login-header.html
+++ b/application/views/components/login-header.html
@@ -8,6 +8,9 @@
             <a href="{{ url_for('profile', username=current_user.username) }}">Profile</a>
         </li>
         <li>
+            <a href="{{ url_for('edit_profile')}}">edit profile</a>
+        </li>
+        <li>
             <a href="{{url_for('logout') }}">Logout</a>
         </li>
     </ul>
