adding function to singup

--- a/application/views/about.html
+++ b/application/views/about.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>About</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur deleniti neque fugit quidem. Cum sequi totam neque repellendus architecto fuga, earum numquam, quas, voluptate non debitis quo nesciunt beatae dolorum.</p>
 {% endblock content %}
