--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -44,6 +44,13 @@
             padding: 5px;
             margin-bottom: 30px;
         }
+        .post-header{
+            display: flex;
+            gap: 10px;
+        }
+        .post_header img{
+            border-radius: 50%;
+        }
     </style>
     {% if title %}
         <title>{{ title }} - Website</title>
