--- a/application/views/components/footer.html
+++ b/application/views/components/footer.html
@@ -2,6 +2,6 @@
     <p style="text-align: center;">Copyright &copy; <span id="pageYear"></span></p>
     <script>
         const year = new Date().getFullYear();
-        document.getElementNyId("pageYear").innerhtml = year;
+        document.getElementById("pageYear").innerhtml = year;
     </script>
 </footer>
