--- a/application/views/login.html
+++ b/application/views/login.html
@@ -42,7 +42,7 @@
 			<div class="">
 				{{ form.submit(class="btn btn-outline-info") }}
 				<small class="">
-					<a href="#">Lupa Kata Sandi?</a>
+					<a href="{{url_for('forgot_pass')}}">Lupa Kata Sandi?</a>
 				</small>
 			</div>
 			<small class="">
